--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b58546f5-fe44-488d-b402-b723a5eff5f4",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -21,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e0f7648-b359-4492-b88d-26566ca78af6",
    "metadata": {
     "tags": [
      "version-info"
@@ -42,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3be18e3-d1b5-49c4-a82e-c3e5ecbd5491",
    "metadata": {},
    "source": [
     "This page explains how to use Qiskit to find information about your available backends."
@@ -50,7 +47,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d675eb-ad62-4436-9649-7cb6837e16f0",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -64,7 +60,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a169a1d-0a02-41cd-89b0-5d606114866d",
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
@@ -77,19 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ad5d41fc-2bb5-4a32-b8bb-8dbc48ef2337",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>,\n",
        " <IBMBackend('ibm_torino')>]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +98,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88565803-2450-45e1-9075-720d9c57681e",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instance representing that particular backend:"
@@ -114,7 +106,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cd1fd069-fe00-4865-8ee5-ba788fa405ba",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +125,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bcbb09a-30c0-4b7e-af9f-71a501fc1c47",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -150,19 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f9611008-cae5-451b-98a8-a59ae281b33e",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>,\n",
        " <IBMBackend('ibm_torino')>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +161,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f7fe95-5fcd-4838-a26a-0ca4aa0882e4",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -182,7 +169,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "89d7a8c6-05e8-4ef8-8e50-bc5ead67a436",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +188,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab8d5ff-b8ce-4562-8226-95f88bae9438",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -214,15 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a42c128e-6559-498b-a313-8f1be787ab23",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: ibm_sherbrooke\n",
+      "Name: ibm_brisbane\n",
       "Version: 2\n",
       "No. of qubits: 127\n",
       "\n"
@@ -230,7 +214,7 @@
     }
    ],
    "source": [
-    "backend = service.backend(\"ibm_sherbrooke\")\n",
+    "backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "print(\n",
     "    f\"Name: {backend.name}\\n\"\n",
@@ -241,7 +225,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48237011-bd39-4481-8df7-5264620aa6f3",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/docs/api/qiskit-ibm-runtime/ibm-backend)."
@@ -249,7 +232,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c38144-478e-4c31-b050-82078de0f505",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -265,7 +247,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "94da1ff9-d491-4d78-8720-29141ab1dddf",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +266,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d3002ef-e196-4d02-b0d7-b84d1a75ce30",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -296,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dc15db13-bf2a-4934-8ef6-cacfb953fde6",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +295,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d304e9f-6e76-4876-bbb2-b6b768f3f9e3",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -325,7 +303,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "810d55d0-2f60-4bce-a1c2-254e2b989b90",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +322,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ba1c604-b4b9-498d-ac29-9cb3a9644e09",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -360,7 +336,7 @@
  "metadata": {
   "description": "Find and filter available backends, get configuration and calibration data programmatically.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.1"
   },
   "title": "Get backend information with Qiskit"
  },
