--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -112,7 +112,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# You can skip this step if you have a target backend, e.g.\n",
-    "# backend_name = \"ibm_sherbrooke\"\n",
+    "# backend_name = \"ibm_brisbane\"\n",
     "# You'll need to specify the credentials when initializing QiskitRuntimeService, if they were not previously saved.\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
@@ -442,7 +442,7 @@
  "metadata": {
   "description": "Explore how to use the IBM Circuit function, with AI-driven transpilation and advanced error mitigation (TREX, ZNE, PEA)",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.1"
   },
   "title": "IBM Circuit function"
  },
