--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -105,7 +105,6 @@
     "- ibm_nazca\n",
     "- ibm_quebec\n",
     "- ibm_rensselaer\n",
-    "- ibm_sherbrooke\n",
     "- ibm_strasbourg\n",
     "- ibm_torino\n",
     "\n",
@@ -620,7 +619,7 @@
  "metadata": {
   "description": "Start solving utility-scale optimization problems with the Fire Opal Optimization Solver by Q-CTRL",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -634,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.1"
   },
   "title": "Optimization Solver - A Qiskit Function by Q-CTRL Fire Opal"
  },
