--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "008d2ceb-f6fa-42f6-a7df-6bd604775278",
    "metadata": {},
    "source": [
     "# Get started with primitives\n",
@@ -22,6 +23,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7e96291-0925-4d7f-81a8-a7738549477c",
    "metadata": {},
    "source": [
     "The steps in this topic describe how to set up primitives, explore the options you can use to configure them, and invoke them in a program.\n",
@@ -39,6 +41,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "818a2b3d-3950-4a28-8e37-39959c56484b",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
+    "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=2.0.0\n",
+    "qiskit-ibm-runtime~=0.37.0\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bafa61f0-c049-4ee6-ac76-a0ed97e67caf",
    "metadata": {},
    "source": [
     "<span id=\"start-estimator\"></span>\n",
@@ -56,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "71d62ba2-b1ba-405a-b304-5bdd7ec5e11b",
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +105,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d894fbe3-3ea8-4db0-908e-95790b560ddb",
    "metadata": {},
    "source": [
     "### 2. Create a circuit and an observable\n",
@@ -89,6 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "c0ad8982-d19b-46d4-8a2d-dd30357c0e52",
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +159,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84b42c6f-d80e-4cff-8e34-03affa566a97",
    "metadata": {},
    "source": [
     "The circuit and observable need to be transformed to only use instructions supported by the QPU (referred to as *instruction set architecture (ISA)* circuits). We'll use the transpiler to do this."
@@ -139,6 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "abefc665-24a7-466e-a9ec-67cac6a50ebd",
    "metadata": {},
    "outputs": [
     {
@@ -160,6 +190,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b53e9ab3-7d87-4dd5-b362-138b24cfa73b",
    "metadata": {},
    "source": [
     "### 3. Initialize Qiskit Runtime Estimator\n",
@@ -170,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "961508db-e534-4fc9-970d-7babcd6c39ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,6 +212,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "59b13a43-0c9f-4fdb-a379-af5115c153e1",
    "metadata": {},
    "source": [
     "### 4. Invoke the Estimator and get results\n",
@@ -190,6 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "f1a60bad-cf09-4136-aa1a-4482759b3aea",
    "metadata": {},
    "outputs": [
     {
@@ -216,6 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "c817cce5-4686-43d2-89a1-ed0842d8ace3",
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +272,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64e2e09f-8528-4088-897b-1529b451ab1e",
    "metadata": {},
    "source": [
     "<span id=\"start-sampler\"></span>\n",
@@ -252,6 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "b40504d7-aee5-4b30-98b1-265e70bece8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,6 +302,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73374fbc-d3b6-4d2d-84c6-edf85b43ea25",
    "metadata": {},
    "source": [
     "### 2. Create a circuit\n",
@@ -275,6 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "dfe23a34-2ea9-48af-bd1d-c7e3185aa80c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +328,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cf08ef6-34d3-42e6-8cb3-391b60217289",
    "metadata": {},
    "source": [
     "Use the transpiler to get an ISA circuit."
@@ -297,6 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "062bd89b-b13e-46d0-96b6-6c84b2131415",
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +358,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf0f2c0a-8574-45c6-a43b-1a99eac81279",
    "metadata": {},
    "source": [
     "### 3. Initialize the Qiskit Runtime Sampler\n",
@@ -327,6 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "a2b80dca-dff8-49f9-8154-e2cb0b768507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,6 +380,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f35972bf-17d3-40be-852b-9e56615c7c3c",
    "metadata": {},
    "source": [
     "### 4. Invoke the Sampler and get results\n",
@@ -347,6 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "e52e6a96-dc23-4f76-8152-b54514a99dfb",
    "metadata": {},
    "outputs": [
     {
@@ -373,6 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "4543fac5-abdc-4440-a1a2-d32aabe135d6",
    "metadata": {},
    "outputs": [
     {
@@ -395,6 +441,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec04840d-5fa1-4716-b585-48aa371f67d4",
    "metadata": {},
    "source": [
     "<span id=\"backend\"></span>\n",
@@ -411,6 +458,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d78f323-1c58-4360-8880-59179c8a14b7",
    "metadata": {},
    "source": [
     "### Example: BackendEstimator\n",
@@ -438,6 +486,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e620a7b2-233d-4e0d-8a42-ee4eda3ccd8d",
    "metadata": {},
    "source": [
     "### Similarities and differences between backend and Runtime primitives\n",
@@ -456,6 +505,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d38dd409-e0d8-4749-bb22-58ae9a53d26a",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -476,7 +526,7 @@
  "metadata": {
   "description": "How to use the Estimator and Sampler primitives in Qiskit Runtime.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -490,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3"
   },
   "title": "Get started with primitives"
  },
