--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7644e8cd-faf5-4384-87e0-86ce1a4f9a37",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -20,6 +21,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76d54c88-3ff2-4836-b1fd-a266fa461130",
    "metadata": {
     "tags": [
      "version-info"
@@ -40,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "039bc58f-530a-4c0b-90ee-c8bb126b34d0",
    "metadata": {},
    "source": [
     "This page explains how to use Qiskit to find information about your available backends."
@@ -47,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5e292f84-986b-4c94-a8c7-d1ede56d0d08",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -60,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bbd100df-d4df-4f3b-9c1d-50c3f19bf2f9",
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
@@ -73,6 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "9af5a961-cdfd-49d1-a198-988b2cc231ff",
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ae15e28-2542-4029-b2c6-f991d47d34bf",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instance representing that particular backend:"
@@ -106,6 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a7a460ca-1d01-4942-b76c-d79e6581d194",
    "metadata": {},
    "outputs": [
     {
@@ -125,6 +133,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "87ea5116-6303-43e0-979d-f899bf7d4863",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -141,6 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ab782327-38fa-4882-86bf-5ac203638ae9",
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +171,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f506e701-5284-48f9-bf94-fc92ff2970e7",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -169,6 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e29239cd-6ad3-49dd-bf9b-7f4265697389",
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +200,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c21c364-74d0-43ef-a20f-086fa461429d",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -200,6 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "352258ac-3c37-42cf-bde9-f1c6891a869b",
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +239,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e721856-84c0-4378-9929-4e9916e479bc",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/docs/api/qiskit-ibm-runtime/ibm-backend)."
@@ -232,6 +247,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e77a73d6-8022-4aed-82e9-0c19f6700391",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -247,6 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "2287792c-3e80-4291-abe6-130ace6bf45d",
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +283,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ebf77e68-6baf-46bd-982a-a10d4f8b6869",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -276,6 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "093c8544-d9c1-4cf1-a643-df2d14942795",
    "metadata": {},
    "outputs": [
     {
@@ -295,6 +314,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3fc6cb8a-28e1-4add-af5e-c0f046f63be1",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -303,6 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "daf7753b-9b77-451e-80a6-ea9212be77f6",
    "metadata": {},
    "outputs": [
     {
@@ -322,6 +343,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db2e6ddb-2636-469a-b0b5-eae864857a1a",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -336,7 +358,7 @@
  "metadata": {
   "description": "Find and filter available backends, get configuration and calibration data programmatically.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -350,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3"
   },
   "title": "Get backend information with Qiskit"
  },
