--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -619,7 +619,7 @@
  "metadata": {
   "description": "Start solving utility-scale optimization problems with the Fire Opal Optimization Solver by Q-CTRL",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -633,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3"
   },
   "title": "Optimization Solver - A Qiskit Function by Q-CTRL Fire Opal"
  },
