--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -8,7 +8,7 @@
     "{/* cspell:ignore LUCJ CCSD ccsd hcore */}\n",
     "\n",
     "# Sample-based quantum diagonalization of a chemistry Hamiltonian\n",
-    "*Usage estimate: under 1 minute on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: under 1 minute on ibm_kingston (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6e51c3d8",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b821e660",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "efe83d98",
    "metadata": {},
    "outputs": [
@@ -254,14 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E(CCSD) = -109.0398256929733  E_corr = -0.204589122198831\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<class 'pyscf.cc.ccsd.CCSD'> does not have attributes  converged\n"
+      "E(CCSD) = -109.0398256929733  E_corr = -0.20458912219883\n"
      ]
     }
    ],
@@ -285,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dd69a86c",
    "metadata": {},
    "outputs": [],
@@ -333,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "53a039d8",
    "metadata": {},
    "outputs": [],
@@ -359,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7d554aa5",
    "metadata": {},
    "outputs": [
@@ -367,8 +360,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gate counts (w/o pre-init passes): OrderedDict([('rz', 4505), ('sx', 3427), ('ecr', 1366), ('x', 207), ('measure', 32), ('barrier', 1)])\n",
-      "Gate counts (w/ pre-init passes): OrderedDict([('rz', 2475), ('sx', 2146), ('ecr', 730), ('x', 77), ('measure', 32), ('barrier', 1)])\n"
+      "Gate counts (w/o pre-init passes): OrderedDict([('sx', 5678), ('rz', 3542), ('cz', 2575), ('x', 318), ('measure', 32), ('barrier', 1)])\n",
+      "Gate counts (w/ pre-init passes): OrderedDict([('sx', 4359), ('rz', 2223), ('cz', 1895), ('x', 121), ('measure', 32), ('barrier', 1)])\n"
      ]
     }
    ],
@@ -427,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "93c1cef3-298e-4deb-8512-769fe94cd5a5",
    "metadata": {},
    "outputs": [],
@@ -438,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "332ecab3-77e6-473f-b0e7-af30f983393a",
    "metadata": {},
    "outputs": [],
@@ -468,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7a102a7f-aae6-4583-ab82-ae40fcb5496a",
    "metadata": {},
    "outputs": [],
@@ -502,11 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting configuration recovery iteration 0\n",
-      "Starting configuration recovery iteration 1\n",
-      "Starting configuration recovery iteration 2\n",
-      "Starting configuration recovery iteration 3\n",
-      "Starting configuration recovery iteration 4\n"
+      "Starting configuration recovery iteration 0\n"
      ]
     }
    ],
@@ -602,17 +591,7 @@
    "execution_count": null,
    "id": "caffd888-e89c-4aa9-8bae-4d1bb723b35e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/docs/images/tutorials/sample-based-quantum-diagonalization/extracted-outputs/caffd888-e89c-4aa9-8bae-4d1bb723b35e-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data for energies plot\n",
     "x1 = range(iterations)\n",
@@ -675,7 +654,7 @@
  "metadata": {
   "description": "Use the sample-based quantum diagonalization algorithm to simulate a nitrogen molecule using noisy quantum hardware.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -689,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.1"
   },
   "platform": "cloud",
   "title": "Improving energy estimation of a Fermionic Hamiltonian with SQD\n"
