--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b72c048e-fe8e-4fc2-b28b-03138249074e",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting configuration recovery iteration 0\n"
+      "Starting configuration recovery iteration 0\n",
+      "Starting configuration recovery iteration 1\n",
+      "Starting configuration recovery iteration 2\n",
+      "Starting configuration recovery iteration 3\n",
+      "Starting configuration recovery iteration 4\n"
      ]
     }
    ],
@@ -588,10 +592,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "caffd888-e89c-4aa9-8bae-4d1bb723b35e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/docs/images/tutorials/sample-based-quantum-diagonalization/extracted-outputs/caffd888-e89c-4aa9-8bae-4d1bb723b35e-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Data for energies plot\n",
     "x1 = range(iterations)\n",
@@ -654,7 +668,7 @@
  "metadata": {
   "description": "Use the sample-based quantum diagonalization algorithm to simulate a nitrogen molecule using noisy quantum hardware.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -668,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Improving energy estimation of a Fermionic Hamiltonian with SQD\n"
