--- a/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb
+++ b/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "Join our communities:\n",
     "* [Qiskit Slack](http://qisk.it/join-slack): Submit a request to join the Qiskit slack workspace and connect with a community of quantum computing professionals and enthusiasts\n",
-    "* [Qiskit Stack Exchange](https://quantumcomputing.stackexchange.com/questions/tagged/qiskit): A Q&A platform for engineers, scientits, programmers, and computing professionals interested in quantum computing using Qiskit\n",
+    "* [Qiskit Stack Exchange](https://quantumcomputing.stackexchange.com/questions/tagged/qiskit): A Q&A platform for engineers, scientist, programmers, and computing professionals interested in quantum computing using Qiskit\n",
     "* [IBM Quantum Stack Exchange](https://quantumcomputing.stackexchange.com/questions/tagged/ibm-q-experience): Q&A space on Stack Exchange about IBM's Quantum Service - Circuit Composer\n",
     "* [IBM Quantum Events](https://www.ibm.com/quantum/events): Stay updated and take part in upcoming quantum events\n",
     "* [IBM Quantum Newsletter](http://ibm.biz/ibm-quantum-network-newsletter): Opt-in to stay tuned on quantum events, available only for the IBM Quantum Network.\n",
