--- a/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
+++ b/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
@@ -22,21 +22,21 @@
     "\n",
     "### Supervision\n",
     "\n",
-    "As a simple definition, machine learning is a collection of algorithms that analyze and draw inferences from patterns and relationships in data. Broadly speaking, machine learning algorithms can be grouped into 3 main categories depending on the type of data involved and how algorithms learn without being explicitly programmed:\n",
-    "1.\t__Supervised learning:__ In supervised learning, the data that is used to train the model is labeled. The goal of these algorithms is to learn the relationship between data and their corresponding labels or outputs and to generalize this to unseen data. Common tasks in this class are classification and regression.\n",
-    "2.\t__Unsupervised learning:__ In contrast to supervised learning, unsupervised learning uses unlabeled data to train the machine learning model. The goal of such algorithms is to discover hidden patterns and structure in data. Some algorithms in this class are clustering and dimensionality reduction algorithms. Some generative models such as generative adversarial networks and variational autoencoders can also be considered in this category.\n",
-    "3.\t__Reinforcement learning:__ Algorithms in this machine learning category are defined by an agent which interacts with an environment. The agent takes actions and receives feedback from its environment in the form of rewards and punishments. Eventually through this feedback mechanism, the agent learns to take the correct set of actions to perform a specific task .\n",
+    "As a simple definition, machine learning is a collection of algorithms that analyze and draw inferences from patterns and relationships in data. Broadly speaking, machine learning algorithms can be grouped into three main categories depending on the type of data involved and how algorithms learn without being explicitly programmed:\n",
+    "1. __Supervised learning:__ In supervised learning, the data that is used to train the model is labeled. The goal of these algorithms is to learn the relationship between data and their corresponding labels or outputs and to generalize this to unseen data. Common tasks in this class are classification and regression.\n",
+    "2. __Unsupervised learning:__ In contrast to supervised learning, unsupervised learning uses unlabeled data to train the machine learning model. The goal of such algorithms is to discover hidden patterns and structure in data. Some algorithms in this class are clustering and dimensionality reduction algorithms. Some generative models such as generative adversarial networks and variational autoencoders can also be considered in this category.\n",
+    "3. __Reinforcement learning:__ Algorithms in this machine learning category are defined by an agent which interacts with an environment. The agent takes actions and receives feedback from its environment in the form of rewards and punishments. Eventually through this feedback mechanism, the agent learns to take the correct set of actions to perform a specific task.\n",
     "\n",
     "![A diagrammatic representation of supervised and unsupervised learning.](/learning/images/courses/quantum-machine-learning/classical-ml-review/qml-cr-background-sup-unsup.avif)\n",
     "\n",
     "\n",
     "### Introducing “quantum” to machine learning\n",
     "\n",
-    "We can now start exploring how “quantum” is introduced into machine learning. In this broader categorization, we consider the type of model/algorithm on the processing device, as well as the type of data provided into it. The picture above summarizes these possible combinations.\n",
+    "We can now start exploring how “quantum” is introduced into machine learning. In this broader categorization, we consider the type of model/algorithm on the processing device, as well as the type of data provided to it. The picture above summarizes these possible combinations.\n",
     "\n",
     "![A diagram showing quadrants with algorithms on one axis and data on the other, where each can be quantum or classical in nature.](/learning/images/courses/quantum-machine-learning/classical-ml-review/cccqqcqq-quadrants-cp.avif)\n",
     "\n",
-    "For instance, CC means that we have a classical dataset – such as images, sound, or text that we can store on classical computers - and that we also use a classical computer to run a machine learning algorithm. This is precisely the classical machine learning setting. On the other hand, QQ means that we are using a quantum computer to process quantum data. Here, “quantum data” could mean several things, and could be context-dependent. Quantum data could be thought of as a set of measurement outcomes obtained from a quantum device, or it could refer to states that have been prepared on a quantum computer by another algorithm. In the future, it could even refer to data stored in QRAM (i.e. Quantum Random Access Memory), which does not currently exist. When researchers talk about quantum machine learning, they usually refer to the CQ regime, where the dataset at hand is classical and the processing device executing the machine learning algorithm is a quantum computer. In the following parts of the course, we will focus on such algorithms.\n",
+    "For instance, CC means that we have a classical dataset – such as images, sound, or text that we can store on classical computers - and that we also use a classical computer to run a machine learning algorithm. This is precisely the classical machine learning setting. On the other hand, QQ means that we are using a quantum computer to process quantum data. Here, “quantum data” could mean several things, and could be context-dependent. Quantum data could be thought of as a set of measurement outcomes obtained from a quantum device, or it could refer to states that have been prepared on a quantum computer by another algorithm. In the future, it could even refer to data stored in QRAM (Quantum Random Access Memory), which does not currently exist. When researchers talk about quantum machine learning, they usually refer to the CQ regime, where the dataset at hand is classical and the processing device executing the machine learning algorithm is a quantum computer. In the following parts of the course, we will focus on such algorithms.\n",
     "\n",
     "## Support vector machines\n",
     "\n",
@@ -44,7 +44,7 @@
     "\n",
     "![A diagram of a support vector machine.](/learning/images/courses/quantum-machine-learning/classical-ml-review/svm-cp.avif)\n",
     "\n",
-    "Let’s suppose a task of binary classification on a dataset with 2-dimensional feature space as shown in the plot. One thing we can do to perform classification for this dataset is to find a line, or in general a hyperplane that separates the two classes. In practice we can find infinitely many separating hyperplanes, so the question is: how do we define the optimal one? The idea here is that a particularly good decision boundary should maximize the margin, which is defined as the distance to the nearest points in each class. In this setting, the data points with the smallest distance to the decision boundary are called support vectors.\n",
+    "Let’s suppose a task of binary classification on a dataset with two-dimensional feature space as shown in the plot. One thing we can do to perform classification for this dataset is to find a line, or in general a hyperplane that separates the two classes. In practice we can find infinitely many separating hyperplanes, so the question is: How do we define the optimal one? The idea here is that a particularly good decision boundary should maximize the margin, which is defined as the distance to the nearest points in each class. In this setting, the data points with the smallest distance to the decision boundary are called support vectors.\n",
     "\n",
     "A linear decision boundary could be described in a number of ways; in some ways the most straightforward way is that shown in $f_1$ below. Here, $\\Theta$ is the set of parameters defining the hyperplane, $\\vec{x}$ is your dataset, and $b$ is a constant shift. $\\Phi$ is a mapping from the space of input data points often (but not necessarily) to a higher dimensional space. We will return to this mapping below.\n",
     "\n",
@@ -67,14 +67,14 @@
     "\n",
     "The video below motivates how quantum can play a role in linear classifiers. This is described in greater detail in the text.\n",
     "\n",
-    "<ImageLink title = \"Quantum kernels\" alt = \"kernel video thumbnail\" href = \"https://video.ibm.com/recorded/134355928\" src = \"/learning/images/courses/quantum-machine-learning/classical-ml-review/cml-review-kernel-thumb2.avif\"/>\n",
+    "<ImageLink title=\"Quantum kernels\" alt=\"kernel video thumbnail\" href=\"https://video.ibm.com/recorded/134355928\" src=\"/learning/images/courses/quantum-machine-learning/classical-ml-review/cml-review-kernel-thumb2.avif\"/>\n",
     "\n",
     "\n",
     "### Moving to higher dimensional spaces\n",
     "\n",
     "In this and the following subsection, the discussion focuses on mappings to higher dimensions. The point here is to explain the \"kernel trick\" in the context of mappings between spaces, and thus set the stage for what a quantum kernel is. The point is __not__ that higher dimensions in quantum wave functions solve all of our problems. As mentioned in the introduction, classical Gaussian feature maps are already infinite-dimensional. The dimensionality of data features is important, but high-dimensional quantum states are not sufficient for improvement over classical methods.\n",
     "\n",
-    "Graphically, one can easily see how we can generalize the SVM approach to cases where the original data are not linearly separable, given the right mapping to higher dimensions. Looking at the 2-dimensional data on the left, we can see that there is no linear decision boundary that can separate the two classes. However, we can consider adding a third feature to our feature space. If this new feature is - for instance - the product of the previous two features $x_1$ and $x_2$, then the data becomes linearly separable. This also means that we can run the support vector machine algorithm successfully now on this higher dimensional feature space.\n",
+    "Graphically, one can easily see how we can generalize the SVM approach to cases where the original data are not linearly separable, given the right mapping to higher dimensions. Looking at the two-dimensional data on the left, we can see that there is no linear decision boundary that can separate the two classes. However, we can consider adding a third feature to our feature space. If this new feature is - for instance - the product of the previous two features $x_1$ and $x_2$, then the data becomes linearly separable. This also means that we can run the support vector machine algorithm successfully now on this higher dimensional feature space.\n",
     "\n",
     "![A diagram showing a ring of one data type with a second data type filling in the middle of the ring. A second cell shows the data projected into 3D, as in a bowl shape. Now the data are linearly separable.](/learning/images/courses/quantum-machine-learning/classical-ml-review/qml-cr-background-2d-3d.avif)\n",
     "\n",
@@ -110,7 +110,7 @@
     "\n",
     "### Quantum kernels\n",
     "\n",
-    "Quantum computers, or quantum states in general, allow for a very natural definition of “quantum kernel”. We can interpret the encoding of an input $\\vec{x}$ into a quantum state $|\\Phi(\\vec{x})\\rangle$ as a feature map. This process may indeed map the data into a very high-dimensional space as is common in classical feature maps, but the dimensionality will depend on the encoding method (see the next lesson in this course). Recall that the inner product of two quantum states $\\langle \\psi | \\phi \\rangle$ is related to the probability of measuring the state $|\\phi\\rangle$ when in the state $|\\psi\\rangle$.measurement probability, we can estimate the inner product of the two mapped data points $\\vec{\\Phi}(\\vec{x}_i)$ and $\\vec{\\Phi}(\\vec{x}_j)$ by making sufficiently many measurements of the resulting circuit.\n",
+    "Quantum computers, or quantum states in general, allow for a very natural definition of “quantum kernel”. We can interpret the encoding of an input $\\vec{x}$ into a quantum state $|\\Phi(\\vec{x})\\rangle$ as a feature map. This process may indeed map the data into a very high-dimensional space as is common in classical feature maps, but the dimensionality will depend on the encoding method (see the Data Encoding lesson). Recall that the inner product of two quantum states $\\langle \\psi | \\phi \\rangle$ is related to the probability of measuring the state $|\\phi\\rangle$ when in the state $|\\psi\\rangle$.measurement probability, we can estimate the inner product of the two mapped data points $\\vec{\\Phi}(\\vec{x}_i)$ and $\\vec{\\Phi}(\\vec{x}_j)$ by making sufficiently many measurements of the resulting circuit.\n",
     "\n",
     "![An abstract representation of a kernal as a circuit.](/learning/images/courses/quantum-machine-learning/classical-ml-review/classical-review-background-kernel-circuit.avif)\n",
     "\n",
@@ -128,7 +128,7 @@
     "\n",
     "The video below gives a brief review of neural networks, and where they overlap with variational quantum circuits. This is explored more in the text.\n",
     "\n",
-    "<ImageLink title = \"QNNs\" alt = \"QNN video thumbnail\" href = \"https://video.ibm.com/recorded/134355923\" src = \"/learning/images/courses/quantum-machine-learning/classical-ml-review/cml-review-qnn-thumb2.avif\"/>\n",
+    "<ImageLink title=\"QNNs\" alt=\"QNN video thumbnail\" href=\"https://video.ibm.com/recorded/134355923\" src=\"/learning/images/courses/quantum-machine-learning/classical-ml-review/cml-review-qnn-thumb2.avif\"/>\n",
     "\n",
     "A neural network is a computational model which is loosely inspired by the structure and the function of neurons in a brain. These neurons, which are nodes that we see in the picture, are organized into layers, and are connected through weights.\n",
     "\n",
@@ -147,7 +147,7 @@
     "f(\\vec{x}) = \\sigma (\\vec{w}\\cdot \\vec{x}+\\vec{b})\n",
     "$$\n",
     "\n",
-    "are calculated at every neuron using the known data $\\vec{x}$ and non-linear $\\sigma$ and also the unknown vectors of weights $\\vec{w}$ and biases $\\vec{b}$. Generally, there could be non-zero weights between all neurons of all layers, and we would call the weights from layer $L$ to layer $L+1$ between neurons $m$ and $n$ $w^L_{m,n}$. Similarly the bias on the $n^\\text{th}$ neuron of the $L^\\text{th}$ layer would be $b^L_n.$ The biases here are unrelated to the $b$'s from the quantum kernel discussion.\n",
+    "are calculated at every neuron using the known data $\\vec{x}$ and non-linear $\\sigma$ and also the unknown vectors of weights $\\vec{w}$ and biases $\\vec{b}$. Generally, there could be non-zero weights between all neurons of all layers, and we would call the weights from layer $L$ to layer $L+1$ between neurons $m$ and $n$ $w^L_{m,n}$. Similarly, the bias on the $n^\\text{th}$ neuron of the $L^\\text{th}$ layer would be $b^L_n.$ The biases here are unrelated to the $b$'s from the quantum kernel discussion.\n",
     "\n",
     "You might start your neural network with a random set of weights and biases, or from a known reasonable starting configuration. From there, the idea is to check how well your neural network classifies things and improve it. We use a cost function to describe how our neural network deviates from correct classification. There are many ways of defining a cost function. We will describe one common example, here, which involves the mean-squared error (MSE):\n",
     "\n",
@@ -171,9 +171,9 @@
     "\n",
     "### Quantum neural network\n",
     "A quantum neural network (QNN) works by first encoding the input data with the unitary layer $U$ in the figure, then applying quantum circuits corresponding to weights between layers ($W$’s below), and finally a layer of measurement. A few key points about this:\n",
-    "- The data loading and weightings are linear operations\n",
-    "- The measurements are non-linear\n",
-    "- So as in the classical NN, we have both linear and non-linear components\n",
+    "- The data loading and weightings are linear operations.\n",
+    "- The measurements are non-linear.\n",
+    "- So as in the classical NN, we have both linear and non-linear components.\n",
     "- The weight circuits still have variational parameters, so there is still a classical minimization to be carried out.\n",
     "\n",
     "![A representation of a quantum neural network as a circuit.](/learning/images/courses/quantum-machine-learning/classical-ml-review/qml-cr-background-qnn-ex-circuit.avif)\n",
