--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -19,8 +19,8 @@
     "\n",
     "### Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "*   Input: Training dataset.\n",
-    "*   Output: Abstract circuit for calculating a kernel matrix entry.\n",
+    "*   Input: Training dataset\n",
+    "*   Output: Abstract circuit for calculating a kernel matrix entry\n",
     "\n",
     "Given the dataset, the starting point is to encode the data into a quantum circuit. In other words, we need to map our data into the Hilbert space of states of our quantum computer. We do this by constructing a data-dependent circuit. There are many ways of doing this, and the previous lesson outlined a number of options. You can construct your own circuit to encode your data, or you can use a pre-made feature map like ZZFeatureMap. In this lesson, we wil do both.\n",
     "\n",
@@ -875,7 +875,7 @@
    "id": "3e4dd6a7-e51c-4dc2-99ea-66e2746e411d",
    "metadata": {},
    "source": [
-    "Recall that the ZZFeatureMap produced rather deep circuits in the case of relatively few features (14). As we increase the number of features, we need to closely monitor circuit depth. To illustrate this, we will first try using the ZZFeatureMap and check the depth of the resulting circuit."
+    "Recall that the ZZFeatureMap produced rather deep circuits in the case of relatively few features (14 features). As we increase the number of features, we need to closely monitor circuit depth. To illustrate this, we will first try using the ZZFeatureMap and check the depth of the resulting circuit."
    ]
   },
   {
