--- a/learning/index.mdx
+++ b/learning/index.mdx
@@ -10,3 +10,4 @@ This page is for open-source previews only.
 If you don't see your course in the following list, edit `learning/index.mdx` and restart the preview.
 
 - [Quantum computing in practice](/learning/courses/quantum-computing-in-practice)
+- [Quantum business foundations](/learning/courses/quantum-business-foundations)
