--- a/learning/courses/quantum-diagonalization-algorithms/qda-1-vqe.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/qda-1-vqe.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "Which do you expect typically makes quantum chemistry with VQE difficult: the number of terms in the Hamiltonian, finding a good ansatz?\n",
     "\n",
-    "__Answer:__</summary>__\n",
+    "__Answer:__\n",
     "\n",
     "It turns out there are ansätze that are highly optimized for chemical contexts. The number of terms in the Hamiltonian, and hence the number of measurements required typically cause more problems."
    ]
